Deep copy enumerable property values

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "url": "https://github.com/kgryte/error-to-json/issues"
   },
   "dependencies": {
-    "object-keys": "^1.0.9"
+    "object-keys": "^1.0.9",
+    "utils-copy": "^1.1.0"
   },
   "devDependencies": {
     "browserify": "12.x.x",
