--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
   - 'stable'
   - '5'
   - '4'
-  - '0.12'
-  - '0.10'
-  - 'iojs'
+  # - '0.12'
+  # - '0.10'
+  # - 'iojs'
 before_install:
   - npm update -g npm
 after_script:
